--- a/css/style.css
+++ b/css/style.css
@@ -480,14 +480,15 @@ img {
      }
 
      .concept-content {
-        display: block;
+        flex-direction: column;
+        text-align: center;
         margin-bottom: 40px;
         
      }
 
      .concept-text {
         margin-bottom: 30px;
-        text-align: center;
+        text-align: left;
      }
 
      .concept-img-wrapper {
